# mdk

./: .gitignore  Cargo.toml  README.md  SECURITY.md  justfile
.github/workflows/: ci.yml  uniffi-bindings-check.yml
crates/mdk-core/: CHANGELOG.md  Cargo.toml
crates/mdk-core/examples/: mls_memory.rs  mls_sqlite.rs
crates/mdk-core/src/: constant.rs  groups.rs  key_packages.rs  lib.rs  prelude.rs  util.rs  welcomes.rs
crates/mdk-core/src/encrypted_media/: manager.rs  metadata.rs  types.rs
crates/mdk-core/src/extension/: group_image.rs
crates/mdk-core/src/media_processing/: metadata.rs  mod.rs  types.rs  validation.rs
crates/mdk-core/src/messages/: application.rs  commit.rs  create.rs  decryption.rs  error_handling.rs  mod.rs  process.rs  proposal.rs  validation.rs
crates/mdk-core/src/mip05/: error.rs  mod.rs  notifications.rs  types.rs
crates/mdk-memory-storage/: CHANGELOG.md  Cargo.toml
crates/mdk-sqlite-storage/: CHANGELOG.md  Cargo.toml  README.md
crates/mdk-sqlite-storage/src/: lib.rs
crates/mdk-storage-traits/: CHANGELOG.md  Cargo.toml
crates/mdk-uniffi/: CHANGELOG.md  Cargo.toml  unbound-methods.txt
crates/mdk-uniffi/src/: lib.rs
scripts/: check-uniffi-bindings.ts
