[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Jeff Gardner <j@jeffg.me>", "MDK Developers"]
homepage = "https://github.com/marmot-protocol/mdk"
repository = "https://github.com/marmot-protocol/mdk"
license = "MIT"
rust-version = "1.90.0"

[workspace.dependencies]
# Internal crates
mdk-memory-storage = { version = "0.7.1", path = "./crates/mdk-memory-storage", default-features = false }
mdk-sqlite-storage = { version = "0.7.1", path = "./crates/mdk-sqlite-storage", default-features = false }
mdk-storage-traits = { version = "0.7.1", path = "./crates/mdk-storage-traits", default-features = false }
mdk-core = { version = "0.7.1", path = "./crates/mdk-core", default-features = false }
mdk-macros = { version = "0.7.1", path = "./crates/mdk-macros" }

# OpenMLS family
openmls = { version = "0.8.1", default-features = false }
openmls_traits = { version = "0.5", default-features = false }
openmls_basic_credential = { version = "0.5", default-features = false }
openmls_rust_crypto = { version = "0.5.1", default-features = false }

# Nostr
nostr = { version = "0.44", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
postcard = { version = "1.1", default-features = false }
tls_codec = "0.4"

# Cryptography
base64 = "0.22"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Image processing (optional features)
image = { version = "0.25", default-features = false }
blurhash = "0.2"
fast-thumbhash = "0.2"
kamadak-exif = "0.6"

# Storage
rusqlite = { version = "0.37", default-features = false }
refinery = "0.9"

# Random number generation
getrandom = "0.4"

# Secure credential storage (v4 architecture - see https://github.com/open-source-cooperative/keyring-rs/issues/259)
keyring-core = "0.7"

# Utilities
hex = { version = "0.4", default-features = false }
lru = { version = "0.16", default-features = false }
parking_lot = "0.12"
pastey = "0.2"
thiserror = "2"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# Async
tokio = { version = "1.47", default-features = false }

# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"

# Testing
tempfile = "3.20"

[profile.release]
opt-level = "z"      # Optimize for binary size over speed
lto = "thin"         # Thin LTO: cross-crate optimization without embedding full IR in .a archives
codegen-units = 1    # Single codegen unit for maximum optimization
panic = "abort"      # No unwinding machinery; safe at UniFFI FFI boundary
strip = true         # Strip all symbols from the output binary
